# ohmydomains-py

./: .editorconfig  .gitignore  LICENSE.txt  README.adoc  pyproject.toml  setup.py
cli/: cli.py  list_domains_output.py
cli/registrars/: __init__.py  zeit.py
ohmydomains/: __init__.py  contact.py  domain.py  manager.py  util.py
ohmydomains/cli/: cli.py
ohmydomains/cli/registrars/: zeit.py
ohmydomains/registrars/: __init__.py  account.py  dynadot.py  gandi.py  name.py  namecheap.py  namesilo.py  raw.py  zeit.py
