[tool.poetry]
name = "ohmydomains"
version = "0.0.1"
description = "An API and CLI to help you manage domain names with ease."
authors = ["Mwo Yuan <code@mwo.sh>"]
license = "BSD-3-Clause"
homepage = "https://ohmy.domains"
repository = "https://github.com/OhMyDomains/ohmydomains.git"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
pendulum = "^2.0.5"
toml = "^0.10.0"
Click = "^7.0"
tabulate = "^0.8.5"
xmltodict = "^0.12.0"
appdirs = "^1.4.3"

[tool.poetry.scripts]
omd = "ohmydomains.cli.cli:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
