[project]
name = 'ohmydomains'
version = '0.0.1'
description = 'An API and CLI to help you manage domain names with ease.'
authors = [
	{ name = 'Blair Noctis', email = 'n@sail.ng' },
]
license = { file = 'LICENSE.txt' }

requires-python = '>=3.11'
dependencies = [
'requests>=2.31',
'pendulum>=2.0',
'Click>=8.0',
'drawtable>=0.2',
'xmltodict>=0.13',
'appdirs>=1.4',
]

[project.urls]
homepage = 'https://github.com/OhMyDomains/ohmydomains-py'
repository = 'https://github.com/OhMyDomains/ohmydomains-py.git'


[project.scripts]
omd = 'ohmydomains.cli.cli:cli'

